change version fb

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
           appId      : '1272449583614205',
           cookie     : true,
           xfbml      : true,
-          version    : '0.1'
+          version    : 'v15.0'
         });
           
         FB.AppEvents.logPageView();   
